--- a/css/styles.css
+++ b/css/styles.css
@@ -504,6 +504,9 @@ img {
     border-radius: 4px;
     border: transparent;
     margin-top: 30px;
+
+margin-left:165px; 
+margin-right: 165px;
     cursor: pointer;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
