--- a/sass/components/_footer-form-btn.scss
+++ b/sass/components/_footer-form-btn.scss
@@ -1,4 +1,4 @@
-/* ---Subscribe-btn--- */
+/ ---Subscribe-btn-- /
 
 .form__btn {
     display: flex;
@@ -32,5 +32,5 @@
 
     &--icon {
     fill: $text-white-color;
-}
-}
+   
+    }
