--- a/sass/components/_footer-form-btn.scss
+++ b/sass/components/_footer-form-btn.scss
@@ -1,6 +1,6 @@
 / ---Subscribe-btn-- /
 
-.form__btn {
+.form__btn{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,4 +33,4 @@
     &--icon {
     fill: $text-white-color;
    
-    }
+    }}
